// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders correctly 1`] = `
<a
  className="
      link
      
      "
  href="test"
  target="_blank"
>
  test
</a>
`;

exports[`Link renders correctly 2`] = `
<a
  className="
      link
      visited
      "
  href="test"
  target="_blank"
>
  test
</a>
`;
